src/main/java/org/max/crafting/interpreter/jlox/parser/main-grammar.txt
// Context-Free Grammar for jlox language
//
// we will try to follow "C" precedence levels (see https://en.cppreference.com/w/c/language/operator_precedence)
//
//

program -> (declaration)* EOF

//====== DECLARATIONS & STATEMENTS ============

declaration -> varDeclaration | statement

varDeclaration -> "var" IDENTIFIER ("=" expression)? ";"

statement -> exprStmt | printStmt | block | ifStatement

exprStmt -> expression ";"

printStmt -> "print" expression ";"

block -> "{" declaration* "}"

ifStatement -> "if" "(" expression ")" statement ("else" statement)?

//====== EXPRESSIONS (all expression are left recursive by default) ============

expression -> comma

comma = assignment ("," comma)*

// assignment is right recursive
assignment -> IDENTIFIER "=" assignment | logic_or

logic_or -> logic_and ("or" logic_and)*

logic_and -> equality ("and" equality)*

equality -> comparison  (("==" | "!=") comparison)*

comparison -> term ((">" | "<=" | "<" | "<=") term)*

term -> factor (("+" | "-") factor)*

factor -> unary (("*" | "/" ) unary)*

// unary operator has highest precedence
unary -> ("!" | "-") unary | primary

primary -> STRING | NUMBER | "true" | "false" | nil | "(" expression ")" | IDENTIFIER
